# cyber-crew

./: .env.example  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
config/: agents.yaml  tasks.yaml
cyber_crew/: crew.py  main.py  shell.py  tools.py
cyber_crew/config/: agents.yaml  tasks.yaml
cyber_crew/tools/: filesystem.py  network.py  run_command.py  utils.py  vulnerability.py
cyber_crew/tools/filesystem/: check_file_exists.py  list_files.py  read_file.py  write_file.py
cyber_crew/tools/network/: fetch_url.py  gobuster_scan.py  nikto_scan.py  nmap_scan.py
cyber_crew/tools/vulnerability/: find_suids.py  search_exploit.py
release/: install_cyber_crew.sh  run_example_ctf.sh
src/cyber_crew/: crew.py
tests/: conftest.py  test_crew.py  test_main.py  test_shell.py  test_tools.py
tests/tools/: test_filesystem.py  test_network.py  test_run_command.py  test_utils.py  test_vulnerability.py
