[project]
name = "cyber_crew"
version = "0.1.0"
description = "cyber-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
cyber_crew = "cyber_crew.main:run"
run_crew = "cyber_crew.main:run"
train = "cyber_crew.main:train"
replay = "cyber_crew.main:replay"
test = "cyber_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
